--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -139,9 +139,12 @@ body {
     animation: bounceit 3s infinite linear;
     -webkit-animation: bounceit 3s infinite linear;
 }
+
+
 #scroller {
     position: absolute;
     float: left;
+    min-height: 20%;
     height: 100%;
     max-width: 22%;
     min-width: 14%;
@@ -166,17 +169,18 @@ body {
     /* border: 2px solid; */
 }
 #top {
-    position: absolute;
-    bottom: 20px;
-    margin-left: 2%;
+    position:absolute;
+    bottom: 2%;
+    margin-left: 20%;
     float: bottom;
     max-height: 17%;
     overflow: hidden;
 }
 #toc {
-    margin-left: 2%;
-    margin-right: 2;
-    max-height: 75%;
+    margin-left: 3%;
+    padding-right: 3%;
+    height: auto;
+    max-height: 85%;
     overflow-y: auto;
     overflow-x: auto;
 }
