--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -29,6 +29,21 @@ body {
 #animationContainer {
     width: 100%;
 }
+
+#impressum {
+ margin-left: 23%; bottom: 2px; position: fixed; background-color: #FF8800;
+        border: 1px thin;
+    border-radius: 2px;
+    font-size: .8em;
+    border-color: transparent;
+    border-radius: 20px;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+#impressum a {
+    color: white;
+}
 #menu {
     -moz-box-shadow: 0 0 5px 5px black;
     -webkit-box-shadow: 0 0 5px 5px black;
