--- a/stylesheets/thirdCase.css
+++ b/stylesheets/thirdCase.css
@@ -5,22 +5,15 @@ body {
     font: 15em;
     line-height: 1.5;
     font-family: "Lucida Grande", "New Century Schoolbook", "Times";
-    background: #ffffff;
-    /* background: rgba(206, 24, 24, 1); /* Old browsers */
-    */ background: -moz-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
-    /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right top, color-stop(3%, #FF8800), color-stop(26%, #ffffff), color-stop(85%, #ffffff), color-stop(96%, #FF8800), color-stop(100%, #EB9636));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
-    /* Opera 11.10+ */
-    background: -ms-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
-    /* IE10+ */
-    background: linear-gradient(to right, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
-    /* W3C */
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#FF8800', endColorstr='#EB9636', GradientType=1);
-    /* IE6-9 */
+background: rgb(85,244,0);
+background: -moz-linear-gradient(left,  rgba(85,244,0,1) 0%, rgba(187,232,11,1) 17%, rgba(82,177,82,1) 20%, rgba(255,255,255,1) 28%, rgba(243,255,234,1) 70%, rgba(0,87,0,1) 88%, rgba(0,36,0,1) 100%);
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(85,244,0,1)), color-stop(17%,rgba(187,232,11,1)), color-stop(20%,rgba(82,177,82,1)), color-stop(28%,rgba(255,255,255,1)), color-stop(70%,rgba(243,255,234,1)), color-stop(88%,rgba(0,87,0,1)), color-stop(100%,rgba(0,36,0,1)));
+background: -webkit-linear-gradient(left,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
+background: -o-linear-gradient(left,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
+background: -ms-linear-gradient(left,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
+background: linear-gradient(to right,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55f400', endColorstr='#002400',GradientType=1 );
+
 }
 
 .container {
@@ -31,50 +24,82 @@ body {
 }
 
 #impressum {
- margin-left: 23%; bottom: 2px; position: fixed; background-color: #FF8800;
+ margin-left: 1%; bottom: 2px; position: fixed;
         border: 1px thin;
     border-radius: 2px;
     font-size: .8em;
+    margin-bottom: 2%;
+    height: auto;
+    max-width: 20%;
+    margin-top: 50%;
     border-color: transparent;
     border-radius: 20px;
     padding-left: 1%;
     padding-right: 1%;
+    
+    background: rgb(180,227,145);
+background: -moz-linear-gradient(-45deg,  rgba(180,227,145,1) 0%, rgba(97,196,25,1) 50%, rgba(180,227,145,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(180,227,145,1)), color-stop(50%,rgba(97,196,25,1)), color-stop(100%,rgba(180,227,145,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
+background: linear-gradient(135deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=1 );
+
 }
 
 #impressum a {
     color: white;
 }
+
+.menuelements {
+    margin-top: 20px;
+    display:block;
+    word-break: break-all;
+}
+.menuelements div {
+    display: block;
+    word-break: break-all;}
+#menu div a {
+    display: block;
+    word-break: break-all;
+}
+
 #menu {
     -moz-box-shadow: 0 0 5px 5px black;
     -webkit-box-shadow: 0 0 5px 5px black;
     box-shadow: 0 0 5px 5px black;
-    min-width: 70%;
-    max-width: 82%;
+    min-width: 16%;
+    max-width: 22%;
+    height: auto;
     z-index: 998;
-    margin-left: 23%;
-    padding-left: 1px;
+    margin-right: 23%;
+    margin-top: 1%;
+    padding-right: 1px;
     position: fixed;
     padding-right: 1px;
-    top: 8px;
+    left: 1%;
     padding-bottom: 2px;
     text-shadow: 1px 1px 1px white;
     border: 1px thin;
     border-radius: 2px;
     border-color: transparent;
-    background: -moz-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
-    /* FF3.6+ */
-    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(76, 76, 76, 1)), color-stop(12%, rgba(20, 20, 20, 0.95)), color-stop(22%, rgba(102, 102, 102, 0.91)), color-stop(50%, rgba(102, 102, 102, 0.8)), color-stop(58%, rgba(102, 102, 102, 0.83)), color-stop(65%, rgba(71, 71, 71, 0.86)), color-stop(76%, rgba(58, 58, 58, 0.9)), color-stop(90%, rgba(43, 43, 43, 0.96)), color-stop(91%, rgba(28, 28, 28, 0.96)), color-stop(100%, rgba(19, 19, 19, 1)));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
-    /* Opera 11.10+ */
-    background: -ms-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
-    /* IE10+ */
-    background: linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
-    /* W3C */
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#4c4c4c', endColorstr='#131313', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
+background: rgb(180,221,180);
+background: -moz-linear-gradient(-45deg,  rgba(180,221,180,1) 0%, rgba(131,199,131,1) 17%, rgba(82,177,82,1) 33%, rgba(0,138,0,1) 67%, rgba(0,87,0,1) 83%, rgba(0,36,0,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(180,221,180,1)), color-stop(17%,rgba(131,199,131,1)), color-stop(33%,rgba(82,177,82,1)), color-stop(67%,rgba(0,138,0,1)), color-stop(83%,rgba(0,87,0,1)), color-stop(100%,rgba(0,36,0,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
+background: linear-gradient(135deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', endColorstr='#002400',GradientType=1 );
+
+}
+
+#menu div h1 {
+   font-size: 1.7em; 
+}
+#menu div p {
+   margin-left: 10px;
 }
 .gallerytable {
     padding: 0;
@@ -107,9 +132,8 @@ body {
     width: auto;
     /* max-width: 600px; 
   margin: 0 auto;  */
-    margin-top:10%;
     padding-left: 25%;
-    max-width: 60%;
+    max-width: 50%;
     min-width: 30%;
     z-index: 400;
     
@@ -127,12 +151,15 @@ body {
 }
 .submenu {
     padding: 0;
+    display: inline;
     position: absolute;
     top: 30px;
     left: 1px;
     right: 1%;
-    padding-left: 20px;
-    margin-left: 30px;
+    padding-left: 10px;
+    margin-right: 10px;
+        padding-right: 50px;
+    margin-left: 20px;
     margin-bottom: 1%;
     width: auto;
     -webkit-box-shadow: none;
@@ -160,41 +187,36 @@ body {
 
 #scroller {
     position: absolute;
-    float: left;
+    float: right;
     min-height: 20%;
-    height: 100%;
+    height: 95%;
+    right: 2px;
     max-width: 22%;
     min-width: 14%;
+    margin-top: 1%;
+    margin-bottom: 4%;
     border: 1px thin;
     border-radius: 5px;
     background: #383838;
     /* Old browsers */
-    background: -moz-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
-    /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(5%, #383838), color-stop(19%, #000000), color-stop(40%, #2d2d2d), color-stop(60%, #111111), color-stop(76%, #2b2b2b), color-stop(91%, #1c1c1c), color-stop(100%, #131313));
-    /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
-    /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
-    /* Opera 11.10+ */
-    background: -ms-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
-    /* IE10+ */
-    background: linear-gradient(135deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
-    /* W3C */
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#383838', endColorstr='#131313', GradientType=1);
-    /* IE6-9 fallback on horizontal gradient */
-    /* border: 2px solid; */
+background: -moz-linear-gradient(-45deg,  rgba(230,240,163,1) 0%, rgba(210,230,56,0.73) 50%, rgba(195,216,37,0.74) 51%, rgba(219,240,67,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(230,240,163,1)), color-stop(50%,rgba(210,230,56,0.73)), color-stop(51%,rgba(195,216,37,0.74)), color-stop(100%,rgba(219,240,67,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
+background: linear-gradient(135deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', endColorstr='#dbf043',GradientType=1 );
+
 }
 #top {
     position:absolute;
     bottom: 2%;
-    margin-left: 20%;
     float: bottom;
     max-height: 17%;
     overflow: hidden;
 }
 #toc {
-    margin-left: 3%;
+    margin-left: 1%;
     padding-right: 3%;
     height: auto;
     max-height: 85%;
@@ -202,14 +224,14 @@ body {
     overflow-x: auto;
 }
 #toc ul li a {
-    color: #F87217;
+    color: #6B8E23;
     width: auto;
     max-width: 10%;
     font: 15em;
     line-height: 1.5;
 }
 #toc ul li a:hover {
-    color: #FDEEF4;
+    color: #228B22;
 }
 #toc ul li:before {
     content: ">";
@@ -224,21 +246,8 @@ body {
     margin-top: 4px;
     margin-left: 25%;
 }
-
-.righty {
- float: right;
-}
-
-.lefty {
-    float: left;
-}
-
-.menuelements {
-    display:block; margin-right:1%; margin-left:1%; min-width: 95%; max-width: 99%;
-}
-
 .dropdowncontainer {
-    display: inline-block;
+    display: list-item;
     position: relative;
     /* padding: 5px 50px; */
     padding-bottom: 15px;
@@ -364,8 +373,7 @@ body {
     }
 }
 #menucontent {
-    float: left;
-    display: inline;
+    display: block;
 }
 li {
     line-height: 1.4;
@@ -383,8 +391,6 @@ li {
 }
 header {
     width: 100%;
-    padding: 20px 0;
-    margin: 0 0 40px 0;
 }
 header h1 {
     font-size: 2em;
@@ -405,7 +411,7 @@ header h2 {
     color: #666;
 }
 #downloads .btn {
-    display: inline-block;
+    display: block;
     text-align: center;
     margin: 0;
 }
@@ -413,7 +419,7 @@ header h2 {
 */
 
 #menuul {
-    display: inline;
+    display: block;
     margin: 0px;
     padding-left: 0px;
 }
@@ -438,7 +444,7 @@ h5,
 h6 {
     font-weight: normal;
     font-family: "Lucida Grande", "New Century Schoolbook", "Times";
-    color: #e65c12;
+    color: #006400;
     letter-spacing: -0.03em;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(181, 232, 83, 0.1), 0 0 10px rgba(181, 232, 83, 0.1);
 }
@@ -518,25 +524,30 @@ hr {
 */
 
 .btn {
-    display: inline-block;
-    background: -moz-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(188, 143, 39, 1)), color-stop(15%, rgba(188, 143, 39, 0.93)), color-stop(58%, rgba(197, 83, 31, 0.71)), color-stop(100%, rgba(206, 24, 24, 1)));
-    background: -webkit-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
-    background: -o-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
-    background: -ms-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
-    background: linear-gradient(135deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bc8f27', endColorstr='#ce1818', GradientType=1);
-    padding: .6em .7em;
+    display:flex;
+background: -moz-linear-gradient(-45deg,  rgba(230,240,163,1) 0%, rgba(44,114,28,0.58) 31%, rgba(50,160,33,0.32) 50%, rgba(56,206,37,0.58) 69%, rgba(219,240,67,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(230,240,163,1)), color-stop(31%,rgba(44,114,28,0.58)), color-stop(50%,rgba(50,160,33,0.32)), color-stop(69%,rgba(56,206,37,0.58)), color-stop(100%,rgba(219,240,67,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
+background: linear-gradient(135deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', endColorstr='#dbf043',GradientType=1 );
+
+    max-width: 90%;
+    padding: .6em .9em;
     margin-left: .4em;
+    padding-left: 5%;
     border-radius: .6em;
     border: 1px solid transparent;
-    color: yellow;
+    color: #98FB98;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
-    font-size: .7em;
+    font-size: .8em;
     text-decoration: none;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+    margin-bottom: 1%;
+
 }
 .btn:hover {
     background: rgb(206, 24, 24);
@@ -551,23 +562,22 @@ hr {
     border-color: red;
 }
 .btn .icon {
-    display: inline-block;
+    display: block;
     width: 16px;
     height: 16px;
     margin: 1px 8px 0 0;
-    float: left;
 }
 /* Links
    a, a:hover, a:visited
 */
 
 .btn a:hover {} a {
-    color: red;
+    color: #6B8E23;
     text-shadow: 0 0 5px rgba(104, 90, 255, 0.5);
 }
 a:hover {
-    color: #202699;
-    text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
+    color: #006400;
+    text-shadow: none;
 }
 /* Clearfix */
 
@@ -583,8 +593,9 @@ a:hover {
     zoom: 1;
 }
 a.tooltip:after {
+    display: none;
     visibility: hidden;
-    position: absolute;
+    word-break: break-all;
     top: 90px;
     left: 25%;
     opacity: 0;
