--- a/stylesheets/thirdCase.css
+++ b/stylesheets/thirdCase.css
@@ -5,27 +5,26 @@ body {
     font: 15em;
     line-height: 1.5;
     font-family: "Lucida Grande", "New Century Schoolbook", "Times";
-background: rgb(85,244,0);
-background: -moz-linear-gradient(left,  rgba(85,244,0,1) 0%, rgba(187,232,11,1) 17%, rgba(82,177,82,1) 20%, rgba(255,255,255,1) 28%, rgba(243,255,234,1) 70%, rgba(0,87,0,1) 88%, rgba(0,36,0,1) 100%);
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(85,244,0,1)), color-stop(17%,rgba(187,232,11,1)), color-stop(20%,rgba(82,177,82,1)), color-stop(28%,rgba(255,255,255,1)), color-stop(70%,rgba(243,255,234,1)), color-stop(88%,rgba(0,87,0,1)), color-stop(100%,rgba(0,36,0,1)));
-background: -webkit-linear-gradient(left,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
-background: -o-linear-gradient(left,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
-background: -ms-linear-gradient(left,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
-background: linear-gradient(to right,  rgba(85,244,0,1) 0%,rgba(187,232,11,1) 17%,rgba(82,177,82,1) 20%,rgba(255,255,255,1) 28%,rgba(243,255,234,1) 70%,rgba(0,87,0,1) 88%,rgba(0,36,0,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55f400', endColorstr='#002400',GradientType=1 );
-
+    background: rgb(85, 244, 0);
+    background: -moz-linear-gradient(left, rgba(85, 244, 0, 1) 0%, rgba(187, 232, 11, 1) 17%, rgba(82, 177, 82, 1) 20%, rgba(255, 255, 255, 1) 28%, rgba(243, 255, 234, 1) 70%, rgba(0, 87, 0, 1) 88%, rgba(0, 36, 0, 1) 100%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(85, 244, 0, 1)), color-stop(17%, rgba(187, 232, 11, 1)), color-stop(20%, rgba(82, 177, 82, 1)), color-stop(28%, rgba(255, 255, 255, 1)), color-stop(70%, rgba(243, 255, 234, 1)), color-stop(88%, rgba(0, 87, 0, 1)), color-stop(100%, rgba(0, 36, 0, 1)));
+    background: -webkit-linear-gradient(left, rgba(85, 244, 0, 1) 0%, rgba(187, 232, 11, 1) 17%, rgba(82, 177, 82, 1) 20%, rgba(255, 255, 255, 1) 28%, rgba(243, 255, 234, 1) 70%, rgba(0, 87, 0, 1) 88%, rgba(0, 36, 0, 1) 100%);
+    background: -o-linear-gradient(left, rgba(85, 244, 0, 1) 0%, rgba(187, 232, 11, 1) 17%, rgba(82, 177, 82, 1) 20%, rgba(255, 255, 255, 1) 28%, rgba(243, 255, 234, 1) 70%, rgba(0, 87, 0, 1) 88%, rgba(0, 36, 0, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(85, 244, 0, 1) 0%, rgba(187, 232, 11, 1) 17%, rgba(82, 177, 82, 1) 20%, rgba(255, 255, 255, 1) 28%, rgba(243, 255, 234, 1) 70%, rgba(0, 87, 0, 1) 88%, rgba(0, 36, 0, 1) 100%);
+    background: linear-gradient(to right, rgba(85, 244, 0, 1) 0%, rgba(187, 232, 11, 1) 17%, rgba(82, 177, 82, 1) 20%, rgba(255, 255, 255, 1) 28%, rgba(243, 255, 234, 1) 70%, rgba(0, 87, 0, 1) 88%, rgba(0, 36, 0, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#55f400', endColorstr='#002400', GradientType=1);
 }
-
 .container {
     width: 100%;
 }
 #animationContainer {
     width: 100%;
 }
-
 #impressum {
- margin-left: 1%; bottom: 2px; position: fixed;
-        border: 1px thin;
+    margin-left: 1%;
+    bottom: 2px;
+    position: fixed;
+    border: 1px thin;
     display: none;
     border-radius: 2px;
     font-size: .8em;
@@ -37,35 +36,31 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#55f400', end
     border-radius: 20px;
     padding-left: 1%;
     padding-right: 1%;
-    
-    background: rgb(180,227,145);
-background: -moz-linear-gradient(-45deg,  rgba(180,227,145,1) 0%, rgba(97,196,25,1) 50%, rgba(180,227,145,1) 100%);
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(180,227,145,1)), color-stop(50%,rgba(97,196,25,1)), color-stop(100%,rgba(180,227,145,1)));
-background: -webkit-linear-gradient(-45deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
-background: -o-linear-gradient(-45deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
-background: -ms-linear-gradient(-45deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
-background: linear-gradient(135deg,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=1 );
-
+    background: rgb(180, 227, 145);
+    background: -moz-linear-gradient(-45deg, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(180, 227, 145, 1)), color-stop(50%, rgba(97, 196, 25, 1)), color-stop(100%, rgba(180, 227, 145, 1)));
+    background: -webkit-linear-gradient(-45deg, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
+    background: linear-gradient(135deg, rgba(180, 227, 145, 1) 0%, rgba(97, 196, 25, 1) 50%, rgba(180, 227, 145, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#b4e391', endColorstr='#b4e391', GradientType=1);
 }
-
 #impressum a {
     color: white;
 }
-
 .menuelements {
     margin-top: 20px;
-    display:block;
+    display: block;
     word-break: break-all;
 }
 .menuelements div {
     display: block;
-    word-break: break-all;}
+    word-break: break-all;
+}
 #menu div a {
     display: block;
     word-break: break-all;
 }
-
 #menu {
     -moz-box-shadow: 0 0 5px 5px black;
     -webkit-box-shadow: 0 0 5px 5px black;
@@ -85,22 +80,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', end
     border: 1px thin;
     border-radius: 2px;
     border-color: transparent;
-background: rgb(180,221,180);
-background: -moz-linear-gradient(-45deg,  rgba(180,221,180,1) 0%, rgba(131,199,131,1) 17%, rgba(82,177,82,1) 33%, rgba(0,138,0,1) 67%, rgba(0,87,0,1) 83%, rgba(0,36,0,1) 100%);
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(180,221,180,1)), color-stop(17%,rgba(131,199,131,1)), color-stop(33%,rgba(82,177,82,1)), color-stop(67%,rgba(0,138,0,1)), color-stop(83%,rgba(0,87,0,1)), color-stop(100%,rgba(0,36,0,1)));
-background: -webkit-linear-gradient(-45deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
-background: -o-linear-gradient(-45deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
-background: -ms-linear-gradient(-45deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
-background: linear-gradient(135deg,  rgba(180,221,180,1) 0%,rgba(131,199,131,1) 17%,rgba(82,177,82,1) 33%,rgba(0,138,0,1) 67%,rgba(0,87,0,1) 83%,rgba(0,36,0,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', endColorstr='#002400',GradientType=1 );
-
+    background: rgb(180, 221, 180);
+    background: -moz-linear-gradient(-45deg, rgba(180, 221, 180, 1) 0%, rgba(131, 199, 131, 1) 17%, rgba(82, 177, 82, 1) 33%, rgba(0, 138, 0, 1) 67%, rgba(0, 87, 0, 1) 83%, rgba(0, 36, 0, 1) 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(180, 221, 180, 1)), color-stop(17%, rgba(131, 199, 131, 1)), color-stop(33%, rgba(82, 177, 82, 1)), color-stop(67%, rgba(0, 138, 0, 1)), color-stop(83%, rgba(0, 87, 0, 1)), color-stop(100%, rgba(0, 36, 0, 1)));
+    background: -webkit-linear-gradient(-45deg, rgba(180, 221, 180, 1) 0%, rgba(131, 199, 131, 1) 17%, rgba(82, 177, 82, 1) 33%, rgba(0, 138, 0, 1) 67%, rgba(0, 87, 0, 1) 83%, rgba(0, 36, 0, 1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(180, 221, 180, 1) 0%, rgba(131, 199, 131, 1) 17%, rgba(82, 177, 82, 1) 33%, rgba(0, 138, 0, 1) 67%, rgba(0, 87, 0, 1) 83%, rgba(0, 36, 0, 1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(180, 221, 180, 1) 0%, rgba(131, 199, 131, 1) 17%, rgba(82, 177, 82, 1) 33%, rgba(0, 138, 0, 1) 67%, rgba(0, 87, 0, 1) 83%, rgba(0, 36, 0, 1) 100%);
+    background: linear-gradient(135deg, rgba(180, 221, 180, 1) 0%, rgba(131, 199, 131, 1) 17%, rgba(82, 177, 82, 1) 33%, rgba(0, 138, 0, 1) 67%, rgba(0, 87, 0, 1) 83%, rgba(0, 36, 0, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#b4ddb4', endColorstr='#002400', GradientType=1);
 }
-
 #menu div h1 {
-   font-size: 1.7em; 
+    font-size: 1.7em;
 }
 #menu div p {
-   margin-left: 10px;
+    margin-left: 10px;
 }
 .gallerytable {
     padding: 0;
@@ -137,7 +130,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', end
     max-width: 50%;
     min-width: 30%;
     z-index: 400;
-    
     /* unneeded due to outfading margin-bottom: 5%; */
 }
 .projectpic {
@@ -159,7 +151,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', end
     right: 1%;
     padding-left: 10px;
     margin-right: 10px;
-        padding-right: 50px;
+    padding-right: 50px;
     margin-left: 20px;
     margin-bottom: 1%;
     width: auto;
@@ -184,8 +176,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', end
     animation: bounceit 3s infinite linear;
     -webkit-animation: bounceit 3s infinite linear;
 }
-
-
 #scroller {
     position: absolute;
     float: right;
@@ -200,17 +190,23 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4ddb4', end
     border-radius: 5px;
     background: #383838;
     /* Old browsers */
-background: -moz-linear-gradient(-45deg,  rgba(230,240,163,1) 0%, rgba(210,230,56,0.73) 50%, rgba(195,216,37,0.74) 51%, rgba(219,240,67,1) 100%);
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(230,240,163,1)), color-stop(50%,rgba(210,230,56,0.73)), color-stop(51%,rgba(195,216,37,0.74)), color-stop(100%,rgba(219,240,67,1)));
-background: -webkit-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
-background: -o-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
-background: -ms-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
-background: linear-gradient(135deg,  rgba(230,240,163,1) 0%,rgba(210,230,56,0.73) 50%,rgba(195,216,37,0.74) 51%,rgba(219,240,67,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', endColorstr='#dbf043',GradientType=1 );
+background: -moz-linear-gradient(-45deg,  rgba(221,255,0,1) 0%, rgba(62,255,0,0.81) 22%, rgba(4,255,0,0.8) 30%, rgba(147,249,57,0.76) 63%, rgba(97,244,0,0.74) 83%, rgba(55,242,127,1) 100%);
+background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(221,255,0,1)), color-stop(22%,rgba(62,255,0,0.81)), color-stop(30%,rgba(4,255,0,0.8)), color-stop(63%,rgba(147,249,57,0.76)), color-stop(83%,rgba(97,244,0,0.74)), color-stop(100%,rgba(55,242,127,1)));
+background: -webkit-linear-gradient(-45deg,  rgba(221,255,0,1) 0%,rgba(62,255,0,0.81) 22%,rgba(4,255,0,0.8) 30%,rgba(147,249,57,0.76) 63%,rgba(97,244,0,0.74) 83%,rgba(55,242,127,1) 100%);
+background: -o-linear-gradient(-45deg,  rgba(221,255,0,1) 0%,rgba(62,255,0,0.81) 22%,rgba(4,255,0,0.8) 30%,rgba(147,249,57,0.76) 63%,rgba(97,244,0,0.74) 83%,rgba(55,242,127,1) 100%);
+background: -ms-linear-gradient(-45deg,  rgba(221,255,0,1) 0%,rgba(62,255,0,0.81) 22%,rgba(4,255,0,0.8) 30%,rgba(147,249,57,0.76) 63%,rgba(97,244,0,0.74) 83%,rgba(55,242,127,1) 100%);
+background: linear-gradient(135deg,  rgba(221,255,0,1) 0%,rgba(62,255,0,0.81) 22%,rgba(4,255,0,0.8) 30%,rgba(147,249,57,0.76) 63%,rgba(97,244,0,0.74) 83%,rgba(55,242,127,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddff00', endColorstr='#37f27f',GradientType=1 );
 
 }
+.langbtn {
+ display: inline;
+    float: left;
+    padding: 200px;
+width: 10%;
+}
 #top {
-    position:absolute;
+    position: absolute;
     bottom: 2%;
     float: bottom;
     max-height: 17%;
@@ -525,15 +521,14 @@ hr {
 */
 
 .btn {
-    display:flex;
-background: -moz-linear-gradient(-45deg,  rgba(230,240,163,1) 0%, rgba(44,114,28,0.58) 31%, rgba(50,160,33,0.32) 50%, rgba(56,206,37,0.58) 69%, rgba(219,240,67,1) 100%);
-background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(230,240,163,1)), color-stop(31%,rgba(44,114,28,0.58)), color-stop(50%,rgba(50,160,33,0.32)), color-stop(69%,rgba(56,206,37,0.58)), color-stop(100%,rgba(219,240,67,1)));
-background: -webkit-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
-background: -o-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
-background: -ms-linear-gradient(-45deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
-background: linear-gradient(135deg,  rgba(230,240,163,1) 0%,rgba(44,114,28,0.58) 31%,rgba(50,160,33,0.32) 50%,rgba(56,206,37,0.58) 69%,rgba(219,240,67,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', endColorstr='#dbf043',GradientType=1 );
-
+    display: flex;
+    background: -moz-linear-gradient(-45deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(230, 240, 163, 1)), color-stop(31%, rgba(44, 114, 28, 0.58)), color-stop(50%, rgba(50, 160, 33, 0.32)), color-stop(69%, rgba(56, 206, 37, 0.58)), color-stop(100%, rgba(219, 240, 67, 1)));
+    background: -webkit-linear-gradient(-45deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
+    background: linear-gradient(135deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#e6f0a3', endColorstr='#dbf043', GradientType=1);
     max-width: 90%;
     padding: .6em .9em;
     margin-left: .4em;
@@ -548,7 +543,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e6f0a3', end
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
     margin-bottom: 1%;
-
 }
 .btn:hover {
     background: rgb(206, 24, 24);
