--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -16,6 +16,48 @@ body {
 }
 /* General & 'Reset' Stuff */
 
+#news {
+    -moz-box-shadow: 0 0 5px 5px black;
+    -webkit-box-shadow: 0 0 5px 5px black;
+    box-shadow: 0 0 5px 5px black;
+    min-width: 20%;
+    width: 23%;
+    max-width: 22%;
+    height: auto;
+    z-index: 998;
+    margin-top: 4%;
+    margin-left: 1%;
+    position: fixed;
+    padding-left: 1px;
+    left: 23%;
+    padding-bottom: 2px;
+    border: 1px thin;
+    border-radius: 2px;
+    border-color: transparent;
+}
+
+.odd {
+background: rgb(58,165,46);
+background: -moz-linear-gradient(top,  rgba(58,165,46,1) 0%, rgba(99,186,70,1) 48%, rgba(35,168,20,1) 56%, rgba(15,130,7,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(58,165,46,1)), color-stop(48%,rgba(99,186,70,1)), color-stop(56%,rgba(35,168,20,1)), color-stop(100%,rgba(15,130,7,1)));
+background: -webkit-linear-gradient(top,  rgba(58,165,46,1) 0%,rgba(99,186,70,1) 48%,rgba(35,168,20,1) 56%,rgba(15,130,7,1) 100%);
+background: -o-linear-gradient(top,  rgba(58,165,46,1) 0%,rgba(99,186,70,1) 48%,rgba(35,168,20,1) 56%,rgba(15,130,7,1) 100%);
+background: -ms-linear-gradient(top,  rgba(58,165,46,1) 0%,rgba(99,186,70,1) 48%,rgba(35,168,20,1) 56%,rgba(15,130,7,1) 100%);
+background: linear-gradient(to bottom,  rgba(58,165,46,1) 0%,rgba(99,186,70,1) 48%,rgba(35,168,20,1) 56%,rgba(15,130,7,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', endColorstr='#0f8207',GradientType=0 );
+
+}
+.even { background: rgb(58,165,46);
+background: -moz-linear-gradient(top,  rgba(58,165,46,1) 0%, rgba(92,242,102,1) 48%, rgba(100,145,17,1) 56%, rgba(18,107,6,1) 100%);
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(58,165,46,1)), color-stop(48%,rgba(92,242,102,1)), color-stop(56%,rgba(100,145,17,1)), color-stop(100%,rgba(18,107,6,1)));
+background: -webkit-linear-gradient(top,  rgba(58,165,46,1) 0%,rgba(92,242,102,1) 48%,rgba(100,145,17,1) 56%,rgba(18,107,6,1) 100%);
+background: -o-linear-gradient(top,  rgba(58,165,46,1) 0%,rgba(92,242,102,1) 48%,rgba(100,145,17,1) 56%,rgba(18,107,6,1) 100%);
+background: -ms-linear-gradient(top,  rgba(58,165,46,1) 0%,rgba(92,242,102,1) 48%,rgba(100,145,17,1) 56%,rgba(18,107,6,1) 100%);
+background: linear-gradient(to bottom,  rgba(58,165,46,1) 0%,rgba(92,242,102,1) 48%,rgba(100,145,17,1) 56%,rgba(18,107,6,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', endColorstr='#126b06',GradientType=0 );
+
+}
+
 .container {
     width: 100%;
 }
@@ -38,6 +80,7 @@ body {
     color: white;
 }
 #menu {
+    display: inline;
     -moz-box-shadow: 0 0 5px 5px #ADFF2F;
     -webkit-box-shadow: 0 0 5px 5px #ADFF2F;
     box-shadow: 0 0 5px 5px #ADFF2F;
@@ -48,7 +91,7 @@ body {
     margin-left: 25%;
     padding-left: 2%;
     padding-right: 2%;
-    position: absolute;
+    position: fixed;
     padding-top: 8px;
     padding-bottom: 2px;
     text-shadow: 1px 1px 1px #FF0000;
@@ -101,6 +144,7 @@ body {
 }
 #showContent {
     width: auto;
+    margin-top:6%;
     /* max-width: 600px; 
   margin: 0 auto;  */
     padding-left: 30%;
@@ -160,6 +204,13 @@ body {
     color: green;
     width: auto;
     max-width: 10%;
+}
+.righty {
+ float: right;
+}
+
+.lefty {
+    float: left;
 }
 #toc ul li a:hover {
     color: blue;
@@ -278,9 +329,10 @@ body {
     filter: grayscale(100%);
     /* IE 6-9 */
     z-index: 444;
-    width: 185px;
-    max-width: 800px;
-    height: 200px;
+    width: 133px;
+    float: right;
+    margin-left: 1%;
+    height: 250px;
     transition: width 2s, height 2s, transform 2s, effect 4s;
 }
 #aboutImg:active {
@@ -343,9 +395,8 @@ body {
         -webkit-transform: rotate(-10deg);
     }
 }
-#menucontent {} section {
-    display: block;
-    margin: 0 0 20px 0;
+#menucontent  {
+    display: inline;
 }
 li {
     line-height: 1.4;
