fix menu-font-sizes for chrome and webkit and center btn-elements definently

--- a/stylesheets/thirdCase.css
+++ b/stylesheets/thirdCase.css
@@ -584,16 +584,17 @@ hr {
     background: -ms-linear-gradient(-45deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
     background: linear-gradient(135deg, rgba(230, 240, 163, 1) 0%, rgba(44, 114, 28, 0.58) 31%, rgba(50, 160, 33, 0.32) 50%, rgba(56, 206, 37, 0.58) 69%, rgba(219, 240, 67, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#e6f0a3', endColorstr='#dbf043', GradientType=1);
-    max-width: 90%;
-    padding: .6em .9em;
+    max-width: 100%;
+    padding: .6em .1em;
     margin-left: .4em;
     align-content: center;
+    text-align: center;
     border-radius: .6em;
     border: 1px solid transparent;
     color: #98FB98;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
-    font-size: .8em;
+    font-size: 0.80em;
     text-decoration: none;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
     box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
