--- a/stylesheets/serious.css
+++ b/stylesheets/serious.css
@@ -5,6 +5,22 @@ body {
     font: 15em;
     line-height: 1.5;
     font-family: "Lucida Grande", "New Century Schoolbook", "Times";
+    background: #ffffff;
+    /* background: rgba(206, 24, 24, 1); /* Old browsers */
+    */ background: -moz-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right top, color-stop(3%, #FF8800), color-stop(26%, #ffffff), color-stop(85%, #ffffff), color-stop(96%, #FF8800), color-stop(100%, #EB9636));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(left, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
+    /* IE10+ */
+    background: linear-gradient(to right, #FF8800 3%, #ffffff 26%, #ffffff 85%, #FF8800 96%, #EB9636 100%);
+    /* W3C */
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#FF8800', endColorstr='#EB9636', GradientType=1);
+    /* IE6-9 */
 }
 
 #news {
@@ -55,42 +71,50 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
 }
 
 #impressum {
- bottom: 0.1px; position: fixed; background-color: white;
+ margin-left: 23%; bottom: 2px; position: fixed; background-color: #FF8800;
         border: 1px thin;
     border-radius: 2px;
     font-size: .8em;
     border-color: transparent;
     border-radius: 20px;
-    width: 100%;
-    text-align: center;
     padding-left: 1%;
     padding-right: 1%;
 }
 
 #impressum a {
-    color: grey;
-}
-
-.current_page_item {
-    color: blue;
-       border-width: medium;
-    border-top-style: none;
-    border-right-style: none;
-    border-bottom-style:dotted;
-    border-left-style: none;
-    border-color: blue;
+    color: white;
 }
 #menu {
-    width: 100%;
-    z-index: 898;
+    -moz-box-shadow: 0 0 5px 5px black;
+    -webkit-box-shadow: 0 0 5px 5px black;
+    box-shadow: 0 0 5px 5px black;
+    min-width: 70%;
+    max-width: 82%;
+    z-index: 998;
+    margin-left: 23%;
     padding-left: 1px;
     position: fixed;
-    top: 0px;
     padding-right: 1px;
+    top: 8px;
     padding-bottom: 2px;
-    text-shadow: 1px 1px 1px blue;
-    height: 13%;
-    background-color: white;
+    text-shadow: 1px 1px 1px white;
+    border: 1px thin;
+    border-radius: 2px;
+    border-color: transparent;
+    background: -moz-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(76, 76, 76, 1)), color-stop(12%, rgba(20, 20, 20, 0.95)), color-stop(22%, rgba(102, 102, 102, 0.91)), color-stop(50%, rgba(102, 102, 102, 0.8)), color-stop(58%, rgba(102, 102, 102, 0.83)), color-stop(65%, rgba(71, 71, 71, 0.86)), color-stop(76%, rgba(58, 58, 58, 0.9)), color-stop(90%, rgba(43, 43, 43, 0.96)), color-stop(91%, rgba(28, 28, 28, 0.96)), color-stop(100%, rgba(19, 19, 19, 1)));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
+    /* IE10+ */
+    background: linear-gradient(45deg, rgba(76, 76, 76, 1) 0%, rgba(20, 20, 20, 0.95) 12%, rgba(102, 102, 102, 0.91) 22%, rgba(102, 102, 102, 0.8) 50%, rgba(102, 102, 102, 0.83) 58%, rgba(71, 71, 71, 0.86) 65%, rgba(58, 58, 58, 0.9) 76%, rgba(43, 43, 43, 0.96) 90%, rgba(28, 28, 28, 0.96) 91%, rgba(19, 19, 19, 1) 100%);
+    /* W3C */
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#4c4c4c', endColorstr='#131313', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
 }
 .gallerytable {
     padding: 0;
@@ -122,9 +146,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
 #showContent {
     width: auto;
     /* max-width: 600px; 
-  margin: 0 auto; */
-    margin-top:7%;  
-    padding-left: 23%;
+  margin: 0 auto;  */
+    margin-top:10%;
+    padding-left: 25%;
+    max-width: 60%;
+    min-width: 30%;
     z-index: 400;
     
     /* unneeded due to outfading margin-bottom: 5%; */
@@ -145,7 +171,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     top: 30px;
     left: 1px;
     right: 1%;
-    z-index: 999;
     padding-left: 20px;
     margin-left: 30px;
     margin-bottom: 1%;
@@ -174,19 +199,35 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
 
 
 #scroller {
-    position: fixed;
+    position: absolute;
     float: left;
     min-height: 20%;
-    height: 80%;
-    top: 17%;
+    height: 100%;
     max-width: 22%;
-    min-width: 22%;
+    min-width: 14%;
     border: 1px thin;
     border-radius: 5px;
+    background: #383838;
+    /* Old browsers */
+    background: -moz-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(5%, #383838), color-stop(19%, #000000), color-stop(40%, #2d2d2d), color-stop(60%, #111111), color-stop(76%, #2b2b2b), color-stop(91%, #1c1c1c), color-stop(100%, #131313));
+    /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    /* IE10+ */
+    background: linear-gradient(135deg, #383838 5%, #000000 19%, #2d2d2d 40%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    /* W3C */
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#383838', endColorstr='#131313', GradientType=1);
+    /* IE6-9 fallback on horizontal gradient */
+    /* border: 2px solid; */
 }
 #top {
     position:absolute;
-    bottom: .7%;
+    bottom: 2%;
     margin-left: 20%;
     float: bottom;
     max-height: 17%;
@@ -241,10 +282,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     position: relative;
     /* padding: 5px 50px; */
     padding-bottom: 15px;
-    padding-top: 15px;
+    padding-top: 5px;
     padding-left: 2px;
     cursor: pointer;
-    z-index: 1000;
+    z-index: 555;
 }
 .dropdowncontainer:hover > .submenu {
     display: block !important;
@@ -294,67 +335,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     content: none;
     /*line-height: 16px; */
 }
-#tocButton {
-    cursor: pointer;
-    font-size: 0.5em;
-    border-width: thin;
-    border-top-style: dotted;
-    border-right-style: solid;
-    border-bottom-style: none;
-    border-left-style: solid;
-    float: right;
-    width:auto;
-    top: 15%;
-    left: 22%;
-    padding-top: 20%;
-    position: fixed;
-    height: 44%;
-}
-
-#tocButton:hover {
-    background-color: red;
- }   
-
-#impressumButton {
-    cursor: pointer;
-    font-size: 0.5em;
-    border-width: thin;
-    border-top-style: solid;
-    border-right-style: none;
-    border-bottom-style:solid;
-    border-left-style: none;
-    bottom: 2.9%;
-    background-color: white;
-    z-index: 997;
-    position: fixed;
-    padding-left: 45%;
-    width: 100%;
-}
-
-#impressumButton:hover {
-    background-color: red;
- } 
-
-#menuButton {
-    cursor: pointer;
-    font-size: 0.5em;
-    border-width: thin;
-    border-top-style: solid;
-    border-right-style: none;
-    border-bottom-style:solid;
-    border-left-style: none;
-    top: 13%;
-    background-color: white;
-    z-index: 899;
-    position: fixed;
-    padding-left: 45%;
-    width: 100%;
-}
-
-#menuButton:hover {
-    background-color: red;
- } 
-
 .dropdowncontainer li:before {
     content: none;
     /*line-height: 16px; */
@@ -364,7 +344,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
     content: none;
 }
 #aboutImg {
-     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
     /* Firefox 10+, Firefox on Android */
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
@@ -430,14 +410,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3aa52e', end
 li {
     line-height: 1.4;
 }
-/* Header, &lt;header&gt;
+/* Header, <header>
    header   - container
    h1       - project name
    h2       - project description
 */
 
 .anchor {
-    top: -90px;
+    top: -125px;
     display: inline;
     position: relative;
 }
@@ -533,7 +513,7 @@ ul li {
     list-style: none;
 }
 ul li:before {
-    content: "->";
+    content: "=>";
     font-family: "Lucida Grande", "New Century Schoolbook", "Times";
     font-size: 1.4;
     color: #black;
@@ -578,28 +558,44 @@ hr {
 */
 
 .langbtn {
+ display: inline;
     float: left;
-    padding-left: 20px;
-    margin-top: .5%;
+    padding: 20px;
+width: auto;
 }
 
 .btn {
     display: inline-block;
-    margin-left: 2em;
-    padding-bottom: 10px;
+    background: -moz-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%, rgba(188, 143, 39, 1)), color-stop(15%, rgba(188, 143, 39, 0.93)), color-stop(58%, rgba(197, 83, 31, 0.71)), color-stop(100%, rgba(206, 24, 24, 1)));
+    background: -webkit-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
+    background: -o-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
+    background: -ms-linear-gradient(-45deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
+    background: linear-gradient(135deg, rgba(188, 143, 39, 1) 0%, rgba(188, 143, 39, 0.93) 15%, rgba(197, 83, 31, 0.71) 58%, rgba(206, 24, 24, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#bc8f27', endColorstr='#ce1818', GradientType=1);
+    padding: .6em .7em;
+    margin-left: .4em;
+    border-radius: .6em;
     text-align: center;
+    border: 1px solid transparent;
+    color: yellow;
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
     font-size: .7em;
+    text-decoration: none;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
 }
 .btn:hover {
-    color: #FFBF00;
-    border-width: thin;
-    border-top-style: none;
-    border-right-style: none;
-    border-bottom-style: solid;
-    border-left-style: none;
+    background: rgb(206, 24, 24);
+    background: -moz-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(39%, rgba(206, 24, 24, 1)), color-stop(73%, rgba(188, 143, 39, 1)));
+    background: -webkit-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
+    background: -o-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
+    background: -ms-linear-gradient(-45deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
+    background: linear-gradient(135deg, rgba(206, 24, 24, 1) 39%, rgba(188, 143, 39, 1) 73%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ce1818', endColorstr='#bc8f27', GradientType=1);
+    color: #f3fa32;
     border-color: red;
 }
 .btn .icon {
@@ -614,8 +610,8 @@ hr {
 */
 
 .btn a:hover {} a {
-    color: #298A08;
-    text-decoration: none;
+    color: red;
+    text-shadow: 0 0 5px rgba(104, 90, 255, 0.5);
 }
 a:hover {
     color: #202699;
@@ -658,6 +654,4 @@ a.tooltip:after {
 a.tooltip:hover:after {
     visibility: visible;
     opacity: 1;
-}</pre>
-  </body>
-</html>
+}
