add shake-effect when a element of project changes

--- a/stylesheets/seriousFlat.css
+++ b/stylesheets/seriousFlat.css
@@ -297,7 +297,7 @@ body.active #menu {
   white-space: nowrap;
 }
 #toc ul li a:hover {
-  color: #FDEEF4;
+  color: #be8e80;
 }
 #toc ul li:before {
   content: ">";
