--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -174,10 +174,10 @@ header {
                 cursor: pointer;
                 z-index: 1000;
             }
-            .dropdowncontainer:hover > .submenu {
+            .dropdowncontainer:hover > .submenuInvisible {
                 display: inline-block!important;
             }
-            .submenu:hover > .submenu {
+            .submenu:hover > .submenuInvisible {
                 display: inline-block !important;
             }
 
@@ -265,30 +265,32 @@ body.active #menu {
 
 .submenu {
     position: absolute;
-    padding: 0;
-    top: 20px;
-    left: 1px;
+    top: -40px;
     z-index: 999;
     height: auto;
-    padding-left: 20px;
-    margin-left: 30px;
-    margin-bottom: 1%;
+    left: -17em;
     width: 35em;
+    padding-bottom: 10px;
     list-style: none;
     
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
-    display: none !important;
+    
 
     background-color: @lightblue;
         
+}
+
+.submenuInvisible {
+    display: none !important;
 }
 
 .submenu > li {
 float: left;
         display: inline;
     padding-top: 4px;
+    z-index: 999;
     /* background-color: @lightblue; */
         
 }
@@ -442,18 +444,18 @@ float: left;
     bottom: 3%;
     height: 5px;
     text-align: center;
-    z-index: 997;
+    z-index: 911;
     position: fixed;
     padding-left: 45%;
     width: 100%;
     background-color: #DBB69D;
     div { 
-        position: inherit;
+        position: fixed;
         height: 25px;
         text-align: center;
         padding-top:5px;
         width: 30px;
-        z-index: 899;
+        z-index: 912;
         margin-left: auto;
         margin-right: auto;
         margin-top: -25px;
