--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -45,26 +45,21 @@ a:hover {
 }
     
 #news {
-    -moz-box-shadow: 0 0 5px 5px black;
-    -webkit-box-shadow: 0 0 5px 5px black;
-    box-shadow: 0 0 5px 5px black;
     width: 20%;
-    height: auto;
+    height: 25%;
     z-index: 998;
-    margin-top: 1%;
-    margin-left: 1%;
     position: fixed;
-    padding-left: 1px;
-    left: 25%;
+    right: 0px;
+    margin-right: 0px;
     padding-bottom: 2px;
-    border-radius: 2px;
-    border-color: transparent;
 }
 
 .odd {
+    background-color: @active;
 
 }
 .even { 
+    background-color: @alternative;
 }
 
 .container {
@@ -321,6 +316,21 @@ float: left;
     z-index: 911;
     border-radius: 5px;
 }
+
+#secondScroller {
+    position: fixed;
+    float: right;
+    min-height: 20%;
+    height: 25%;
+    top: 12%;
+    right: 0px;
+    padding-top: 1%;
+    max-width: 22%;
+    min-width: 22%;
+    z-index: 911;
+    border-radius: 5px;
+}
+
 #top {
     position:absolute;
     bottom: .7%;
@@ -441,6 +451,41 @@ float: left;
         
     }
 }
+
+#newsButton {
+    cursor: pointer;
+    float: left;
+    width:4px;
+    vertical-align: middle;
+    right: 20%;
+    top: 19%;
+    z-index: 890;
+    position: fixed;
+    height: 15%;
+    background: @alternative;
+    padding-top: 10%;  
+    div {
+        display: inline-block;   
+        position: fixed;
+        height: 25px;
+        text-align: center;
+        vertical-align: middle;
+        width: 30px;
+        z-index: 899;
+        margin-top: auto;
+        margin-left: -30px;
+        margin-bottom: auto;
+        padding-top: 2px;  
+        border-top-left-radius: 5px;
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 0px;
+        background: @alternative;
+
+        
+    }
+}
+
 #impressumButton {
     cursor: pointer;
     bottom: 3%;
