--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -85,8 +85,7 @@ a:hover {
 }
 
 .current_page_item {
-    color: red;
-    background: @alternative;
+    background: @alternative !important;
 }
 
 header {
@@ -290,7 +289,7 @@ float: left;
         display: inline;
     padding-top: 4px;
     z-index: 999;
-    /* background-color: @lightblue; */
+    background-color: none; 
         
 }
 .submenu li a {
