smother button-change in scrolling

--- a/stylesheets/seriousFlat.css
+++ b/stylesheets/seriousFlat.css
@@ -69,7 +69,7 @@ a:hover {
   color: grey;
 }
 .current_page_item {
-  background: #dbb69d !important;
+  background: #ffffff !important;
 }
 header {
   width: 100%;
