--- a/stylesheets/seriousFlat.less
+++ b/stylesheets/seriousFlat.less
@@ -4,6 +4,7 @@
 @lightblue: #E6EDF4;
 @alternative: #DBB69D;
 @active: #BE8E80;
+@white: #fff;
 @menuheight: 70px;
 
 @font-face {
@@ -85,7 +86,7 @@ a:hover {
 }
 
 .current_page_item {
-    background: @alternative !important;
+    background: @white !important;
 }
 
 header {
